# hipgisaxs-2.0

./: CMakeLists.txt  LICENSE.txt  README.md  main.py  requirements.txt  setup.py
examples/: adva_main.py  cheng_batch.py  chris_main.py  water_drop.py
gisaxs/: common.py  config.py  detector.py  fresnel.py  fresnel_multi.py  inputs.py  main.py  plot.py  qspace.py  rotation.py  structure_factor.py  unitcell.py
gisaxs/ff/: __init__.py  cone.py  cylinder.py  sphere.py
hipgisaxs/: __init__.py  detector.py  distributions.py  experiment.py  fresnel.py  instrument.py  main.py  output.py  plot.py  rotation.py  sample.py  structure_factor.py  unitcell.py
hipgisaxs/ff/: __init__.py  cone.py  cuboid.py  cylinder.py  gratings.py  meshwrapper.py  multicone.py  polygon.py  sphere.py  trapezoid.py
hipgisaxs/ff/gpu/: cone.py
json/: instrument.json  output.json  sample.json
samples/: ex2-coreshell.json  ex3-meshff.json
scripts/: gen_config.py
src/: cmplx_utils.cuh  cone.cpp  cone.cu  cuda_utils.cuh  ff_tri_cpu.cpp  ff_tri_gpu.cu  ffnumeric.h  hipgisaxs.h  pyHipgisaxs.cpp  pyTriangulation.cpp  rotation.h  types.h
